# tamien

./: README.md  TODO  runtests  tamien.cabal
Tamien/: Core.hs  GM.hs  Heap.hs  HeapTest.hs  TI.hs  TestUtil.hs
Tamien/Core/: Language.hs  Parser.hs  ParserTest.hs  Print.hs  Printer.hs
Tamien/GM/: Compiler.hs  Eval.hs  EvalTest.hs  State.hs
Tamien/TI/: Eval.hs  EvalTest.hs
