Name:                tamien
Version:             0.1
Synopsis:            Functional Language Exploration
License:             MIT
License-file:        LICENSE
Author:              Chris Pettitt
Maintainer:          chris@samsarin.com
Category:            Language

Build-type:          Simple
Cabal-version:       >=1.2

Library
  Ghc-options:         -W
  Exposed-modules:     Tamien.Core,
                       Tamien.Core.Language,
                       Tamien.Core.Parser,
                       Tamien.Core.Printer
                       Tamien.TI,
                       Tamien.TI.Eval
  Build-depends:       base, parsec, pretty, containers
